src/gwt/src/org/rstudio/studio/client/workbench/views/source/editors/text/findreplace/FindReplaceBar.css
@external gwt-CheckBox;
@external macintosh, windows, ubuntu_mono;

.findReplaceBar div, .findReplaceBar td {
   white-space: nowrap;
}

.findReplaceBar button {
   position: relative;
   top: 1px;
   margin-right: 3px;
}

.findReplaceBar .gwt-CheckBox input {
   margin-top: 0 !important;
}

.findReplaceBar .gwt-CheckBox {
   margin-top: 1px;
   font-size: 9px;
   white-space: nowrap;
}

.replaceTextBox {
   margin-left: 10px;
}

.findPanel {
   margin-top: 4px;
}

.optionsPanel {
   margin-top: 9px; 
}

.checkboxLabel {
   margin-top: 2px;
   margin-right: 8px;
   font-size: 9px;
}

.ubuntu_mono .checkboxLabel {
   font-size: 10px;
}

.windows .checkboxLabel {
   font-size: 10px;
   margin-left: 2px;
   margin-top: 3px;
}

@if rstudio.desktop true {
.macintosh .checkboxLabel {
   margin-top: 5px;	
}
.ubuntu_mono .checkboxLabel {
   margin-top: 5px;
}
.macintosh .optionsPanel {
   margin-top: 7px;
}
}

.closeButton {
   position: relative;
   top: 1px;
   background-color: transparent;
   border: 0;
   padding: 0 !important;
   margin: 0 !important;
   outline: 0;
}

